--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 txt = "<p>You are currently using the <b>" + navigator.appCodeName + "</b> browser on the  <b>" + navigator.platform + "</b> platform</p>";
 txt+= "<p>Cookies Enabled: " + navigator.cookieEnabled + "</p>";
-txt+= "<p>User-agent header: " + navigator.userAgent + "</p>";
+txt+= "<p class='useragent'>User-agent header: " + navigator.userAgent + "</p>";
 document.getElementById("example").innerHTML=txt;
 </script>
 <iframe src="http://discussion.academyart.edu/serverStatus.do"></iframe>
