--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <script type="text/javascript">
 
-txt = "<p>You are currently using the <b>" + navigator.appCodeName + "</b> browser on the  <b>" + navigator.platform + "</b> platform</p>";
+txt = "<p>You are currently using the <b>" + navigator.appName + "</b> browser on the  <b>" + navigator.platform + "</b> platform</p>";
 txt+= "<p>Cookies Enabled: " + navigator.cookieEnabled + "</p>";
 txt+= "<p class='useragent'>User-agent header: " + navigator.userAgent + "</p>";
 document.getElementById("example").innerHTML=txt;
